--- a/Nathan/permutation/experimental_circles.css
+++ b/Nathan/permutation/experimental_circles.css
@@ -22,14 +22,18 @@ hr {
 
 #slider-full-output {
     margin-left: 10px;
+    margin-top: 20px;
     font-weight: bold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    float: left;
 }
 
 #slider-fill-output {
     margin-left: 10px;
+    margin-top: 20px;
     font-weight: bold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    float: left;
 }
 
 
