--- a/Nathan/permutation/css/restrictions.css
+++ b/Nathan/permutation/css/restrictions.css
@@ -4,7 +4,8 @@
 }
 
 #restrictions-button-container {
-    width: 50%;
+    width: 30%;
+    margin-left: 10px;
     height: 50px;
     margin-top: 10px;
 }
@@ -25,7 +26,7 @@
 }
 
 .restriction-exercise-container {
-    width: 50%;
+    width: 100%;
     margin-top: 20px;
 }
 
@@ -40,6 +41,11 @@
 }
 
 .restriction-solutions {
-    width: 60%;
+    width: 100%;
     margin-top: 20px;
+}
+
+.Mathjax_Display {
+   text-align: center !important;
+   margin-left: 40%;
 }
