--- a/Nathan/permutation/css/experimental_circles.css
+++ b/Nathan/permutation/css/experimental_circles.css
@@ -4,6 +4,7 @@ h1 {
 
 body {
     background-color: #0099cc;
+    margin-left: 10px;
 }
 
 hr {
@@ -18,18 +19,18 @@ input[type=range]::-webkit-slider-thumb {
     pointer-events:auto;
 }
 
+.experiment {
+    float: left;
+    width: 60%;   
+}
 
 #reset-circles {
     float: right;
     display: none;
 }
 
-#correct-permutations {
-    margin-top: 50px;
-}
 
 #correct-permutations-table {
-    width: 50%;
     border: 1px solid black;
 }
 
@@ -37,10 +38,6 @@ input[type=range]::-webkit-slider-thumb {
     border-top: 1px solid black;
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-#correct-subset-permutations {
-    margin-top: 50px;
 }
 
 #correct-subset-permutations-table {
@@ -186,4 +183,10 @@ input[type=range]::-webkit-slider-thumb {
 
 .align-container {
     margin-left: 20px;
+}
+
+.permutation-table-container {
+    float: right;
+    width: 40%;
+    height: 400px;
 }
