--- a/Nathan/permutation/css/experimental_circles.css
+++ b/Nathan/permutation/css/experimental_circles.css
@@ -19,16 +19,14 @@ input[type=range]::-webkit-slider-thumb {
     pointer-events:auto;
 }
 
-.experiment {
-    float: left;
-    width: 60%;   
-}
-
 #reset-circles {
     float: right;
     display: none;
 }
 
+#experiment-container {
+    margin-top: 50px;
+}
 
 #correct-permutations-table {
     border: 1px solid black;
@@ -79,11 +77,13 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 #perm-range-container {
-    width: 50%
+    width: 50%;
+    float: left;
+    padding-top: 20px;
 }
 
 #perm-subset-range-container {
-    width: 50%
+    width: 50%;
 }
 
 #perm-range-slider {
@@ -105,7 +105,6 @@ input[type=range]::-webkit-slider-thumb {
 
 #circles1-answer-container {
     width: 25%;
-    margin-top: 50px;
 }
 
 #circles1-answer {
@@ -188,5 +187,10 @@ input[type=range]::-webkit-slider-thumb {
 .permutation-table-container {
     float: right;
     width: 40%;
-    height: 400px;
+    height: 300px;
+}
+
+.experiment {
+    float: left;
+    width: 60%;   
 }
