Added a move counter, cleaned up some files

--- a/Vincent/CC-207 Frogs on a Log Puzzle/style.css
+++ b/Vincent/CC-207 Frogs on a Log Puzzle/style.css
@@ -48,3 +48,8 @@
   text-decoration: underline;
   border: solid 1px #a4bef0;
 }
+
+.moveCounter {
+  grid-column: span 1;
+  align-self: center;
+}
