--- a/Vincent/CC-207 Frogs on a Log Puzzle/style.css
+++ b/Vincent/CC-207 Frogs on a Log Puzzle/style.css
@@ -15,19 +15,20 @@
   grid-template-columns: 1fr;
   background: url(imgs/background.jpg);
   background-size: cover;
+  width: 98vw;
+  height: calc(98vw * 0.53);
 }
 
 .frogGrid {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
   justify-items: center;
-  padding: 0 80px;
+  padding: 0 30px;
 }
 
 .frog {
   grid-column: span 1;
   grid-row: 3;
-  padding-bottom: 50px;
+  padding-bottom: 80px;
 }
 
 .btns {
@@ -37,7 +38,7 @@
   align-self: center; 
   border: solid 1px #6390e4;
   border-radius: 2em;
-  padding: 5px 10px;
+  padding: 1em 1.75em;
   background: #6390e4;
   text-transform: uppercase;
   font-family: Arial, Helvetica, sans-serif;
@@ -49,7 +50,7 @@
   border: solid 1px #a4bef0;
 }
 
-.moveCounter {
+.counter {
   grid-column: span 1;
   align-self: center;
 }
