Added table to frogs puzzle

--- a/Vincent/CC-207 Frogs on a Log Puzzle/style.css
+++ b/Vincent/CC-207 Frogs on a Log Puzzle/style.css
@@ -54,3 +54,20 @@
   grid-column: span 1;
   align-self: center;
 }
+
+#moveTable {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#moveTable > td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+#moveTable > tr:nth-child(even) {
+  background-color: #dddddd;
+}
